# repo-recall

./: .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Makefile  README.md  SPEC.md
.claude/: launch.json  settings.json
.github/workflows/: ci.yml
src/: activity.rs  commits.rs  db.rs  join.rs  lib.rs  main.rs  scanner.rs  sessions.rs
src/routes/: dashboard.rs  fallback.rs  mod.rs  refresh.rs  repos.rs  search.rs  sessions.rs  templates.rs  ws.rs
static/: dashboard-reload.js  livereload.js  refresh-countdown.js  style.css
tests/: smoke.rs
